--- a/AutoHook/Resources/Localization/UIStrings.zh.resx
+++ b/AutoHook/Resources/Localization/UIStrings.zh.resx
@@ -1442,4 +1442,13 @@
   <data name="StellarHookset" xml:space="preserve">
     <value></value>
   </data>
+  <data name="FolderMostBeEmpty" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="FolderExported" xml:space="preserve">
+    <value>已导出预设至剪贴板</value>
+  </data>
+  <data name="ExportFolderClipboard" xml:space="preserve">
+    <value>Export Folder to Clipboard</value>
+  </data>
 </root>
