--- a/AutoHook/Resources/Localization/UIStrings.ja.resx
+++ b/AutoHook/Resources/Localization/UIStrings.ja.resx
@@ -165,6 +165,9 @@
   <data name="TabPresets_DrawHeader_IsEnabledByDefault" xml:space="preserve">
     <value>新しい餌が追加されたときにデフォルトで有効になります </value>
   </data>
+  <data name="TabPresets_DrawHeader_CorrectlyEditTheBaitMoochName" xml:space="preserve">
+    <value></value>
+  </data>
   <data name="NewBaitMooch" xml:space="preserve">
     <value>新しい餌</value>
   </data>
@@ -899,6 +902,9 @@
   </data>
   <data name="Preset_set_to_" xml:space="preserve">
     <value>プリセット:</value>
+  </data>
+  <data name="Gig_preset_set_to_" xml:space="preserve">
+    <value>：</value>
   </data>
   <data name="When_gaining_spectral_current" xml:space="preserve">
     <value>幻海流が発生したとき</value>
