Ability to reset counter after swapping baits (#73)
-> Added the ability to reset the counter after swapping baits. Really only useful for cosmic exploration missions but, allows for presets to be combined into one vs having 2 different ones when going for certain fish.

--- a/AutoHook/Resources/Localization/UIStrings.resx
+++ b/AutoHook/Resources/Localization/UIStrings.resx
@@ -1498,4 +1498,7 @@ You may also use the command /ahstart to start. Try making a macro with it!</val
     <value>Moving folder:</value>
     <comment>Moving folder: FolderName</comment>
   </data>
+  <data name="Reset_Counter_Bait_Swap" xml:space="preserve">
+    <value>Reset counter after swapping baits</value>
+  </data>
 </root>
