add multihook to fishcaught too

--- a/AutoHook/Resources/Localization/UIStrings.resx
+++ b/AutoHook/Resources/Localization/UIStrings.resx
@@ -1591,4 +1591,10 @@ You may also use the command /ahstart to start. Try making a macro with it!</val
   <data name="Multihook" xml:space="preserve">
     <value>Multihook</value>
   </data>
+  <data name="Use_Multihook" xml:space="preserve">
+    <value>Use Multihook</value>
+  </data>
+  <data name="Multihook_Settings" xml:space="preserve">
+    <value>Multihook Settings</value>
+  </data>
 </root>
